posting improvement ideas and icon indicating that there is some implemented (#46)
* posting improvement ideas is now possible (via rest)

* bulb icon appears at the right bottom of the screen when there are improvement ideas available (visible to ADMINISTRATORS only), but no logic implemented when you click the bulb

* smth fix

--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec='http://www.thymeleaf.org/extras/spring-security'>
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-3">
@@ -91,21 +92,41 @@
                 <div class="border border-2 rounded p-3 d-flex flex-column justify-content-center align-items-center">
                     <h4>Help us make "TestingEz" better!</h4>
                     <span>How to improve?</span>
-                    <input class="border border-2 rounded px-1 w-100 mb-1"
-                           id="idea"
-                           type="text">
-                    <button class="btn btn-dark border border-2 px-5" id="is">SEND</button>
+                    <form
+                            th:action="@{/user/post-improvement}"
+                            th:object="${improvementData}"
+                            method="post"
+                            class="text-center">
+                        <input class="border border-2 rounded px-1 w-100 mb-1"
+                               id="idea"
+                               type="text"
+                               th:field="*{idea}">
+                        <button class="btn btn-dark border border-2 px-5" id="is" type="submit">SEND</button>
+                        <div class="text-danger fs-6"
+                             th:errors="*{idea}"
+                             th:if="${#fields.hasErrors('idea')}">
+                        </div>
+                        <div th:if="${sent}" class="text-success fs-6">
+                            Thanks! Your improvement idea was sent!
+                        </div>
+                    </form>
                     <span class="bg-success d-none" id="mes">Thanks!</span>
                 </div>
             </div>
         </div>
     </main>
-
+    <div class="position-fixed bottom-0 end-0 p-3">
+        <a th:href="@{/user/improvement/ideas}"
+           class="nav-link"
+           th:if="${ideasAvailable == true}"
+           sec:authorize="hasRole('ROLE_ADMINISTRATOR')">
+            <img src="/images/idea.png"
+                 style="width: 35px; height: auto;"
+                 alt="ideas">
+        </a>
+    </div>
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-
-<!--TODO: The script can't send the request successfully-->
-<script src="/js/send-improvement-idea.js"></script>
 <script src="/js/clicker-game.js"></script>
 <script src="/js/guess-the-number-game.js"></script>
 <script src="/js/reveal-answer.js"></script>
