--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -116,7 +116,7 @@
         </div>
     </main>
     <div class="position-fixed bottom-0 end-0 p-3">
-        <a th:href="@{/user/improvement/ideas}"
+        <a th:href="@{/user/improvement/ideas(page=0, size=5)}"
            class="nav-link"
            th:if="${ideasAvailable == true}"
            sec:authorize="hasRole('ROLE_ADMINISTRATOR')">
