--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -93,7 +93,7 @@
                     <h4>Help us make "TestingEz" better!</h4>
                     <span>How to improve?</span>
                     <form
-                            th:action="@{/user/post-improvement}"
+                            th:action="@{/user/improvements/post}"
                             th:object="${improvementData}"
                             method="post"
                             class="text-center">
