You can see improvement ideas + disapprove them  (#47)
* logic moved from user service to result service + impr-ideas.html template created

* admin can see ideas

* delete mapping implemented + refacotring on the microservice

* you can disapprove improvement ideas

--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -93,7 +93,7 @@
                     <h4>Help us make "TestingEz" better!</h4>
                     <span>How to improve?</span>
                     <form
-                            th:action="@{/user/post-improvement}"
+                            th:action="@{/user/improvements/post}"
                             th:object="${improvementData}"
                             method="post"
                             class="text-center">
@@ -116,7 +116,7 @@
         </div>
     </main>
     <div class="position-fixed bottom-0 end-0 p-3">
-        <a th:href="@{/user/improvement/ideas}"
+        <a th:href="@{/user/improvement/ideas(page=0, size=5)}"
            class="nav-link"
            th:if="${ideasAvailable == true}"
            sec:authorize="hasRole('ROLE_ADMINISTRATOR')">
