index.html dark mode added

--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -3,7 +3,7 @@
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
-<footer th:fragment="footer" class="shadow rounded border-top border-black bg-secondary">
+<footer th:fragment="footer" class="border-top border-black bg-secondary">
     <div class="container-fluid">
         <footer class="container bg-secondary">
             <ul class="nav justify-content-center pb-3 mb-3">
