--- a/TestingEz/src/main/resources/templates/sign-in.html
+++ b/TestingEz/src/main/resources/templates/sign-in.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{fragments/heads :: head}"></div>
-<body class="bg-secondary vh-100 d-flex justify-content-center align-items-center font">
+<body class="bg-light vh-100 d-flex justify-content-center align-items-center font">
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="bg-light p-5 border border-black border-3 shadow rounded fs-5">
+    <div class="bg-light p-5 border border-2 rounded fs-5 shadow">
         <h2 class="text-center" th:text="#{login}">Login</h2>
         <form action="#"
               class="d-flex flex-column"
@@ -16,10 +16,10 @@
             </div>
             <label for="username" class="form-label" th:text="#{loginUsername}">Username:</label>
             <div class="input-group">
-                <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
+                <span class="input-group-text" id="inputGroupPrepend">@</span>
                 <input
                         aria-describedby="inputGroupPrepend"
-                        class="form-control border border-black fs-6"
+                        class="form-control border fs-6"
                         id="username"
                         th:placeholder="#{enterUsername}"
                         required
@@ -34,7 +34,7 @@
             <label for="password" class="form-label" th:text="#{loginPassword}">Password:</label>
             <div class="input-group">
                 <input
-                        class="form-control border border-black fs-6"
+                        class="form-control border fs-6"
                         id="password"
                         name="password"
                         th:placeholder="#{enterPassword}"
@@ -49,7 +49,7 @@
                     class="text-danger fs-6"></div>
             <button
                     type="submit"
-                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 mt-3"
+                    class="btn btn-light border border-2 rounded fs-5 mt-3"
                     th:text="#{signIn}"
             >
                 Sign In
@@ -57,7 +57,10 @@
         </form>
     </div>
 </div>
-
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
