--- a/TestingEz/src/main/resources/templates/sign-up.html
+++ b/TestingEz/src/main/resources/templates/sign-up.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
-<div class="d-flex flex-column min-vh-100 gap-5 bg-secondary p-3">
-    <main class="container d-flex flex-column flex-fill align-item-center justify-content-center flex-grow-1 bg-secondary">
+<div class="d-flex flex-column min-vh-100 gap-5 bg-light p-3">
+    <main class="container d-flex flex-column flex-fill align-item-center justify-content-center flex-grow-1 bg-light">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-10 col-lg-8 bg-light shadow rounded border border-2 border-black p-3">
+            <div class="col-sm-12 col-md-10 col-lg-8 bg-light rounded border border-2 p-3 shadow">
                 <h2 class="text-center" th:text="#{register}">Register</h2>
                 <form
                         class="needs-validation"
@@ -20,7 +20,7 @@
                             <div class="input-group has-validation">
                                 <input
                                         aria-describedby="inputGroupPrepend"
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="username"
                                         maxlength="25"
                                         minlength="5"
@@ -35,7 +35,8 @@
                                  th:errors="*{username}"
                                  th:if="${#fields.hasErrors('username')}">
                             </div>
-                            <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">This username is
+                            <div th:if="${invalidUsername}" class="text-danger fs-6" th:text="#{usernameInUse}">This
+                                username is
                                 already in use.
                             </div>
                         </div>
@@ -46,7 +47,7 @@
                             <label for="password" class="form-label" th:text="#{registerPassword}">Password:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="password"
                                         minlength="8"
                                         name="password"
@@ -60,16 +61,19 @@
                                  th:errors="*{password}"
                                  th:if="${#fields.hasErrors('password')}">
                             </div>
-                            <div th:if="${invalidPasswords}" class="text-danger fs-6" th:text="#{passwordsNotMatching}">Passwords DO NOT match.</div>
+                            <div th:if="${invalidPasswords}" class="text-danger fs-6" th:text="#{passwordsNotMatching}">
+                                Passwords DO NOT match.
+                            </div>
                         </div>
                     </div>
 
                     <div class="row justify-content-center">
                         <div class="col">
-                            <label for="confirmPassword" class="form-label" th:text="#{confirmPassword}">Confirm password:</label>
+                            <label for="confirmPassword" class="form-label" th:text="#{confirmPassword}">Confirm
+                                password:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="confirmPassword"
                                         minlength="8"
                                         name="confirmPassword"
@@ -91,7 +95,7 @@
                             <label for="firstName" class="form-label" th:text="#{firstName}">First Name:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="firstName"
                                         name="firstName"
                                         required
@@ -112,7 +116,7 @@
                             <label for="lastName" class="form-label" th:text="#{lastName}">Last Name:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="lastName"
                                         name="lastName"
                                         required
@@ -133,7 +137,7 @@
                             <label for="email" class="form-label" th:text="#{registerEmail}">Email:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="email"
                                         name="email"
                                         placeholder="name@example.com"
@@ -158,7 +162,7 @@
                             <label for="phone" class="form-label" th:text="#{registerPhone}">Phone number:</label>
                             <div class="input-group has-validation">
                                 <input
-                                        class="form-control border border-black fs-6"
+                                        class="form-control border fs-6"
                                         id="phone"
                                         name="phone"
                                         pattern="^[0-9]{3}-[0-9]{3}-[0-9]{4}$"
@@ -183,7 +187,7 @@
                         <div class="col d-flex justify-content-center">
                             <button
                                     type="submit"
-                                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 px-5 mt-3"
+                                    class="btn btn-light border border-2 rounded fs-5 px-5 mt-3"
                                     th:text="#{signUp}"
                             >
                                 Sign Up
@@ -195,7 +199,10 @@
         </div>
     </main>
 </div>
-
+<script
+        type="module"
+        src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
