implementing dark theme #2

--- a/TestingEz/src/main/resources/templates/fragments/footers.html
+++ b/TestingEz/src/main/resources/templates/fragments/footers.html
@@ -4,7 +4,7 @@
 <body class="font">
 
 <footer th:fragment="footer" class="border-top border-2 bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
         <footer class="container bg-light">
             <ul class="nav justify-content-center pb-3 mb-3">
                 <li class="nav-item">
