--- a/TestingEz/src/main/resources/templates/fragments/headers.html
+++ b/TestingEz/src/main/resources/templates/fragments/headers.html
@@ -5,11 +5,11 @@
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
-<header th:fragment="header" class="flex-shrink-0 border-bottom border-black shadow">
+<header th:fragment="header" class="flex-shrink-0 border-bottom border-2">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid gap-1">
             <a
-                    class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
+                    class="navbar-brand bg-light rounded px-1 fs-5 border border-2"
                     th:href="@{/user/profile}"
             >
                 <img
@@ -34,38 +34,38 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                     <a
-                            class="nav-link text-center fs-5 link-light active"
+                            class="nav-link text-center fs-5 text-dark"
                             aria-current="page"
                             th:href="@{/user/home}"
                             th:text="#{headerHome}"
                     >Home</a>
                     <a
-                            class="nav-link text-center fs-5 link-light active"
+                            class="nav-link text-center fs-5 text-dark"
                             aria-current="page"
                             th:href="@{/test/join}"
                             th:text="#{joinTest}"
                     >Join Test</a>
                     <a
-                            class="nav-link text-center fs-5 link-light"
+                            class="nav-link text-center fs-5 text-dark"
                             th:href="@{/test/create}"
                             th:text="#{createTest}"
                     >Create Test</a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center fs-5 text-dark"
                        th:href="@{/user/my-results(page=0, size=5)}"
                        th:text="#{myResults}">
                         My Results
                     </a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center fs-5 text-dark"
                        th:href="@{/user/my-tests(page=0, size=5)}"
                        th:text="#{myTests}">
                         My Tests
                     </a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center fs-5 text-dark"
                        th:href="@{/test/all(page=0, size=5)}"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                        th:text="#{allTests}"
                     >All Tests</a>
-                    <a class="nav-link text-center fs-5 link-light"
+                    <a class="nav-link text-center fs-5 text-dark"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                        th:text="#{allUsers}"
@@ -77,7 +77,7 @@
                             method="post"
                             th:action="@{/account/logout}">
                         <button
-                                class="bnt bg-light rounded shadow px-3 py-2 fs-5 text-center mt-3 mt-lg-0 border border-black border-2"
+                                class="bnt bg-light rounded px-3 py-2 fs-5 text-center mt-3 mt-lg-0 border border-2"
                                 type="submit"
                                 th:text="#{logout}"
                         >
