--- a/TestingEz/src/main/resources/templates/index.html
+++ b/TestingEz/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
             </p>
             <a
                     href="/account/login"
-                    class="btn btn-light btn-lg me-3 px-5 border border-2 rounded"
+                    class="btn btn-light btn-lg me-3 px-5 border border-2 rounded shadow"
                     role="button"
                     th:text="#{signIn}"
             >
@@ -48,7 +48,7 @@
             </a>
             <a
                     href="/account/create"
-                    class="btn btn-light btn-lg px-5 border border-2 rounded"
+                    class="btn btn-light btn-lg px-5 border border-2 rounded shadow"
                     role="button"
                     th:text="#{signUp}"
             >
